tests/rosetta/out/Smalltalk/abbreviations-simple.out
/workspace/mochi/tests/rosetta/out/Smalltalk/abbreviations-simple.st:60: parse error, expected integer literal or floating-point literal or decimal literal
